k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: platter-backend-service
  labels:
    app: platter-backend
spec:
  type: ClusterIP
  selector:
    app: platter-backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
