k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: platter-frontend-service
  labels:
    app: platter-frontend
spec:
  type: ClusterIP
  selector:
    app: platter-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
