k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platter-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:194133065055:certificate/bb8bff22-c4dd-429f-aac2-d9ff033acf9e
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/healthcheck-port: "8000"
    alb.ingress.kubernetes.io/success-codes: "200"
spec:
  rules:
    - host: useplatter.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: platter-frontend-service
                port:
                  number: 80

    - host: api.useplatter.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: platter-backend-service
                port:
                  number: 8000
